# boyl

./: Cargo.toml  README.md  boyl.yml
src/: boolprompt.rs  cmd.rs  config.rs  copy.rs  list.rs  main.rs  template.rs  ui.rs  userbool.rs  userpath.rs  verbosity.rs  walkdir.rs
src/cmd/: delete.rs  edit.rs  heart.rs  list.rs  make.rs  mod.rs  new.rs  tree.rs  version.rs  xoxo.rs
src/full_ui/: mod.rs
src/ui/: help.rs  input.rs  layout.rs  list.rs  mod.rs  spinner.rs
src/ui/file/: list.rs  mod.rs
