[package]
name = "boyl"
version = "0.1.0"
authors = ["Miguel Murça <mikeevmm@github>"]
edition = "2018"

[dependencies]
clap = "~2.33.3"
num-traits = "~0.2.14"
shellexpand = "~2.1.0"
dirs = "~3.0.2"
serde_json = "~1.0.64"
colored = "~2.0.0"
rprompt = "~1.0.5"
better-panic = "~0.2.0"

[dependencies.serde]
version = "~1.0.126"
features = ["derive"]
